# CLI-chess

./: .pre-commit-config.yaml  pyproject.toml
cli_chess/: errors.py
cli_chess/objects/: board.py  enums.py  pieces.py  position.py  vector.py
cli_chess/tests/: conftest.py  test_bishop.py  test_board.py  test_enums.py  test_king.py  test_knight.py  test_pawn.py  test_piece.py  test_position.py  test_queen.py  test_rook.py  test_vector.py
